fix: removed tabs underline when they wrap

--- a/dokka-subprojects/plugin-base-frontend/src/main/ui-kit/tabs/styles.scss
+++ b/dokka-subprojects/plugin-base-frontend/src/main/ui-kit/tabs/styles.scss
@@ -5,7 +5,11 @@
 
 .tabs-section,
 .platform-hinted > .platform-bookmarks-row {
-  border-bottom: 1px solid var(--text-outline);
+  border-bottom: 1px inset var(--text-outline);
+
+  &.tabs_wrapping {
+    border-bottom: none;
+  }
 }
 
 .section-tab, /* regular tabs */
